--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
         </div>
       </form>
     </div>
+    <div class="bg">
+      <img src="./assets/img/bg.svg" alt="background-image">
+    </div>
     <script src="script.js"></script>
     <div class="loading-spinner"></div>
   </body>
